@@ -24,49 +24,46 @@
 
 package org.jenkinsci.plugins.pipeline.utility.steps.tar;
 
+import static org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils.separatorsToSystemEscaped;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assumptions.assumeTrue;
+
 import hudson.model.Label;
 import hudson.model.Result;
+import java.io.File;
+import java.net.URL;
+import java.net.URLDecoder;
+import java.nio.charset.StandardCharsets;
 import org.jenkinsci.plugins.pipeline.utility.steps.DecompressStepExecution;
 import org.jenkinsci.plugins.workflow.cps.CpsFlowDefinition;
 import org.jenkinsci.plugins.workflow.job.WorkflowJob;
 import org.jenkinsci.plugins.workflow.job.WorkflowRun;
 import org.jenkinsci.plugins.workflow.steps.StepConfigTester;
-import org.junit.Assume;
-import org.junit.Before;
-import org.junit.Rule;
-import org.junit.Test;
-import org.jvnet.hudson.test.BuildWatcher;
+import org.junit.jupiter.api.Assumptions;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-
-import java.io.File;
-import java.net.URL;
-import java.net.URLDecoder;
-import java.nio.charset.StandardCharsets;
-
-import static org.jenkinsci.plugins.pipeline.utility.steps.FilenameTestsUtils.separatorsToSystemEscaped;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assume.assumeTrue;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 
 /**
  * Tests for {@link UnTarStep}.
  *
  * @author Alexander Falkenstern &lt;Alexander.Falkenstern@gmail.com&gt;.
  */
-public class UnTarStepTest {
+@WithJenkins
+class UnTarStepTest {
 
-    @Rule
-    public JenkinsRule j = new JenkinsRule();
-    @Rule
-    public BuildWatcher watcher = new BuildWatcher();
+    private JenkinsRule j;
 
-    @Before
-    public void setup() throws Exception {
+    @BeforeEach
+    void setUp(JenkinsRule rule) throws Exception {
+        j = rule;
         j.createOnlineSlave(Label.get("slaves"));
     }
 
     @Test
-    public void configRoundTrip() throws Exception {
+    void configRoundTrip() throws Exception {
         UnTarStep step = new UnTarStep("target/my.tgz");
         step.setDir("base/");
         step.setGlob("**/*.tgz");
@@ -78,24 +75,26 @@ public class UnTarStepTest {
     }
 
     @Test
-    public void simpleUntar() throws Exception {
+    void simpleUntar() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('compressIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    tar file: '../hello.tgz'\n" +
-                        "  }\n" +
-                        "  dir('decompressIt') {\n" +
-                        "    untar '../hello.tgz'\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('compressIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            tar file: '../hello.tgz'
+                          }
+                          dir('decompressIt') {
+                            untar '../hello.tgz'
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Extracting: hello.txt ->", run);
         j.assertLogContains("Extracting: two/hello.txt ->", run);
@@ -104,26 +103,28 @@ public class UnTarStepTest {
     }
 
     @Test
-    public void globUntar() throws Exception {
+    void globUntar() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('compressIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    tar file: '../hello.tar.gz'\n" +
-                        "  }\n" +
-                        "  dir('decompressIt') {\n" +
-                        "    untar file: '../hello.tar.gz', glob: '**/*.txt'\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "    txt = readFile 'two/hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('compressIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            tar file: '../hello.tar.gz'
+                          }
+                          dir('decompressIt') {
+                            untar file: '../hello.tar.gz', glob: '**/*.txt'
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                            txt = readFile 'two/hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Extracting: hello.txt ->", run);
         j.assertLogContains("Extracting: two/hello.txt ->", run);
@@ -133,120 +134,132 @@ public class UnTarStepTest {
     }
 
     @Test
-    public void tarTest() throws Exception {
-        Assume.assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    void tarTest() throws Exception {
+        Assumptions.assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('compressIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello Data World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    tar file: '../hello.tgz'\n" +
-                        "  }\n" +
-                        "  sh 'head -c $(($(cat hello.tgz | wc -c) / 2)) hello.tgz > corrupt.tgz'\n" +
-                        "  def result = untar file: 'corrupt.tgz', test: true \n" +
-                        "  if (result != false)\n" +
-                        "      error('Should be corrupt!')\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('compressIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello Data World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            tar file: '../hello.tgz'
+                          }
+                          sh 'head -c $(($(cat hello.tgz | wc -c) / 2)) hello.tgz > corrupt.tgz'
+                          def result = untar file: 'corrupt.tgz', test: true
+                          if (result != false)
+                              error('Should be corrupt!')
+                        }""",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testTarGZTestingBrokenTarGZ() throws Exception {
+    void testTarGZTestingBrokenTarGZ() throws Exception {
         /*
-         This test uses a prepared tgz file that has a single flipped bit inside the byte stream of the tgz file entry.
-         The test method has to find this error. This will require the stream to be read, because the CRC check is able
-         to reveal this error.
-         */
+        This test uses a prepared tgz file that has a single flipped bit inside the byte stream of the tgz file entry.
+        The test method has to find this error. This will require the stream to be read, because the CRC check is able
+        to reveal this error.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_broken.tar.gz");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                "  if (result)\n" +
-                "      error('Should be corrupt!')\n" +
-                "}", true));
+                "node {\n" + "  def result = untar file: '"
+                        + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (result)\n"
+                        + "      error('Should be corrupt!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testTarGZTestingOkayTarGZ() throws Exception {
+    void testTarGZTestingOkayTarGZ() throws Exception {
         /*
-         This test uses a prepared tar.gz file without any errors.
-         */
+        This test uses a prepared tar.gz file without any errors.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_ok.tar.gz");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                "  if (!result)\n" +
-                "      error('Should be okay!')\n" +
-                "}", true));
+                "node {\n" + "  def result = untar file: '"
+                        + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (!result)\n"
+                        + "      error('Should be okay!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testTarTestingBrokenTar() throws Exception {
+    void testTarTestingBrokenTar() throws Exception {
         /*
-         This test uses a prepared tgz file that has a single flipped bit inside the byte stream of the tgz file entry.
-         The test method has to find this error. This will require the stream to be read, because the CRC check is able
-         to reveal this error.
-         */
+        This test uses a prepared tgz file that has a single flipped bit inside the byte stream of the tgz file entry.
+        The test method has to find this error. This will require the stream to be read, because the CRC check is able
+        to reveal this error.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_broken.tar");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                        "  if (result)\n" +
-                        "      error('Should be corrupt!')\n" +
-                        "}", true));
+                "node {\n" + "  def result = untar file: '"
+                        + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (result)\n"
+                        + "      error('Should be corrupt!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void testTarTestingOkayTar() throws Exception {
+    void testTarTestingOkayTar() throws Exception {
         /*
-         This test uses a prepared tar.gz file without any errors.
-         */
+        This test uses a prepared tar.gz file without any errors.
+        */
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("test_ok.tar");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), "UTF-8")).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                        "  if (!result)\n" +
-                        "      error('Should be okay!')\n" +
-                        "}", true));
+                "node {\n" + "  def result = untar file: '"
+                        + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (!result)\n"
+                        + "      error('Should be okay!')\n"
+                        + "}",
+                true));
         j.assertBuildStatusSuccess(p.scheduleBuild2(0));
     }
 
     @Test
-    public void untarQuiet() throws Exception {
+    void untarQuiet() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('compressIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    writeFile file: 'hello.dat', text: 'Hello World!'\n" +
-                        "    dir('two') {\n" +
-                        "      writeFile file: 'hello.txt', text: 'Hello World2!'\n" +
-                        "    }\n" +
-                        "    tar file: '../hello.tgz'\n" +
-                        "  }\n" +
-                        "  dir('decompressIt') {\n" +
-                        "    untar file: '../hello.tgz', quiet: true\n" +
-                        "    String txt = readFile 'hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "    txt = readFile 'two/hello.txt'\n" +
-                        "    echo \"Reading: ${txt}\"\n" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('compressIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            writeFile file: 'hello.dat', text: 'Hello World!'
+                            dir('two') {
+                              writeFile file: 'hello.txt', text: 'Hello World2!'
+                            }
+                            tar file: '../hello.tgz'
+                          }
+                          dir('decompressIt') {
+                            untar file: '../hello.tgz', quiet: true
+                            String txt = readFile 'hello.txt'
+                            echo "Reading: ${txt}"
+                            txt = readFile 'two/hello.txt'
+                            echo "Reading: ${txt}"
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogNotContains("Extracting: hello.txt ->", run);
         j.assertLogNotContains("Extracting: two/hello.txt ->", run);
@@ -255,64 +268,73 @@ public class UnTarStepTest {
         j.assertLogContains("Reading: Hello World!", run);
         j.assertLogContains("Reading: Hello World2!", run);
     }
+
     @Test
-    public void untarKeepPermissions() throws Exception {
+    void untarKeepPermissions() throws Exception {
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         p.setDefinition(new CpsFlowDefinition(
-                "node('slaves') {\n" +
-                        "  dir('compressIt') {\n" +
-                        "    writeFile file: 'hello.txt', text: 'Hello World!'\n" +
-                        "    if (isUnix()) {\n" +
-                        "      sh 'chmod +x ./hello.txt'\n" +
-                        "    }\n" +
-                        "    tar file: '../hello.tgz'\n" +
-                        "  }\n" +
-                        "  dir('decompressIt') {\n" +
-                        "    untar file: '../hello.tgz', quiet: true\n" +
-                        "    String txt = ''\n" +
-                        "    if (isUnix()) {\n" +
-                        "      txt = sh(script: 'if [ -x ./hello.txt ]; then cat ./hello.txt; else echo false; fi', returnStdout: true).trim()\n" +
-                        "    } else {\n" +
-                        "      txt = readFile 'hello.txt'\n" +
-                        "    }\n" +
-                        "    echo \"${txt}\"" +
-                        "  }\n" +
-                        "}", true));
+                """
+                        node('slaves') {
+                          dir('compressIt') {
+                            writeFile file: 'hello.txt', text: 'Hello World!'
+                            if (isUnix()) {
+                              sh 'chmod +x ./hello.txt'
+                            }
+                            tar file: '../hello.tgz'
+                          }
+                          dir('decompressIt') {
+                            untar file: '../hello.tgz', quiet: true
+                            String txt = ''
+                            if (isUnix()) {
+                              txt = sh(script: 'if [ -x ./hello.txt ]; then cat ./hello.txt; else echo false; fi', returnStdout: true).trim()
+                            } else {
+                              txt = readFile 'hello.txt'
+                            }
+                            echo "${txt}"\
+                          }
+                        }""",
+                true));
         WorkflowRun run = j.assertBuildStatusSuccess(p.scheduleBuild2(0));
         j.assertLogContains("Hello World!", run);
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void testingAbsolutePathsShouldFail() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void testingAbsolutePathsShouldFail() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("absolute.tar");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8)).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                        "  if (result)\n" +
-                        "      error('Should be fail!')\n" +
-                        "}", true));
+                "node {\n" + "  def result = untar file: '"
+                        + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (result)\n"
+                        + "      error('Should be fail!')\n"
+                        + "}",
+                true));
         WorkflowRun run = j.buildAndAssertSuccess(p);
         j.assertLogContains("is out of bounds!", run);
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void testingAbsolutePathsShouldNotFailWithEscapeHatch() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void testingAbsolutePathsShouldNotFailWithEscapeHatch() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         try {
             DecompressStepExecution.ALLOW_EXTRACTION_OUTSIDE_DESTINATION = true;
             j.createOnlineSlave(Label.get("bbb"));
             WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
             URL resource = getClass().getResource("absolute.tar");
-            String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8)).getAbsolutePath().replace('\\', '/');
+            String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                    .getAbsolutePath()
+                    .replace('\\', '/');
             p.setDefinition(new CpsFlowDefinition(
-                    "node('bbb') {\n" +
-                            "  def result = untar file: '" + separatorsToSystemEscaped(tgz) + "', test: true\n" +
-                            "  if (!result)\n" +
-                            "      error('Should not be fail!')\n" +
-                            "}", true));
+                    "node('bbb') {\n" + "  def result = untar file: '"
+                            + separatorsToSystemEscaped(tgz) + "', test: true\n" + "  if (!result)\n"
+                            + "      error('Should not be fail!')\n"
+                            + "}",
+                    true));
             WorkflowRun run = j.buildAndAssertSuccess(p);
             j.assertLogNotContains("is out of bounds!", run);
         } finally {
@@ -320,34 +342,35 @@ public class UnTarStepTest {
         }
     }
 
-    @Test @Issue("SECURITY-2196")
-    public void absolutePathsShouldFailBuild() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    @Test
+    @Issue("SECURITY-2196")
+    void absolutePathsShouldFailBuild() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
         URL resource = getClass().getResource("absolute.tar");
-        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8)).getAbsolutePath().replace('\\', '/');
+        String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                .getAbsolutePath()
+                .replace('\\', '/');
         p.setDefinition(new CpsFlowDefinition(
-                "node {\n" +
-                        "  untar file: '" + separatorsToSystemEscaped(tgz) + "'\n" +
-                        "}", true));
+                "node {\n" + "  untar file: '" + separatorsToSystemEscaped(tgz) + "'\n" + "}", true));
         WorkflowRun run = j.buildAndAssertStatus(Result.FAILURE, p);
         j.assertLogContains("is out of bounds!", run);
     }
 
     @Test
     @Issue("SECURITY-2196")
-    public void absolutePathsShouldNotFailBuildWithEscapeHatch() throws Exception {
-        assumeTrue("Can only run in a gnu unix environment", File.pathSeparatorChar == ':');
+    void absolutePathsShouldNotFailBuildWithEscapeHatch() throws Exception {
+        assumeTrue(File.pathSeparatorChar == ':', "Can only run in a gnu unix environment");
         try {
             DecompressStepExecution.ALLOW_EXTRACTION_OUTSIDE_DESTINATION = true;
 
             WorkflowJob p = j.jenkins.createProject(WorkflowJob.class, "p");
             URL resource = getClass().getResource("absolute.tar");
-            String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8)).getAbsolutePath().replace('\\', '/');
+            String tgz = new File(URLDecoder.decode(resource.getPath(), StandardCharsets.UTF_8))
+                    .getAbsolutePath()
+                    .replace('\\', '/');
             p.setDefinition(new CpsFlowDefinition(
-                    "node {\n" +
-                            "  untar file: '" + separatorsToSystemEscaped(tgz) + "'\n" +
-                            "}", true));
+                    "node {\n" + "  untar file: '" + separatorsToSystemEscaped(tgz) + "'\n" + "}", true));
             WorkflowRun run = j.buildAndAssertStatus(Result.SUCCESS, p);
             j.assertLogNotContains("is out of bounds!", run);
         } finally {
